KIBON-434: Rundungsprobleme bei EKV-Veränderung in Prozent zum Vorjahr. PMD